fix content panel overflow x

--- a/src/Components/Pages/TextReadPage/TextReadPage.module.scss
+++ b/src/Components/Pages/TextReadPage/TextReadPage.module.scss
@@ -36,6 +36,7 @@
   overflow-y: scroll;
   padding-left: 3px;
   padding-right: 3px;
+  word-break: break-all;
   white-space: pre-line;
 }
 
